[package]
name = "tetap-app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tetap_app_lib"
crate-type = [
  "lib",
  "cdylib",
  "staticlib"
]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
# 插件
tauri-plugin-single-instance = "2.0.0-rc"
tauri-plugin-persisted-scope = "2.0.0-rc"
tauri-plugin-store = "2.0.0-rc"
tauri-plugin-stronghold = "2.0.0-rc"
tauri-plugin-log = "2.0.0-rc"

[dependencies.tauri-plugin-sql]
features = [ "sqlite" ] # or "postgres", or "mysql"
version = "2.0.0-rc"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
